# unichunk

./: .gitignore  README.md  app.py  high_level_design.html  ingestion_graph_config.py  metrics.html  pyproject.toml  requirements.txt  retreival_graph_config.py  state.py  streamlit_backend_connector.py  tools.py
nodes/ingestion_nodes/: chunk_aggregator.py  content_classifier.py  document_loader.py  embedding_node.py  table_chunker.py  text_chunker.py  visual_chunker.py
nodes/retrieval_nodes/: answer_generator.py  highlight_node.py  index_loader.py  pandas_node.py  plotting_node.py  query_classifier.py  query_embedder.py  query_modality_classifier.py  retreiver.py
